--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,4 +1,9 @@
 /* COLORS */
+$main: #333333;
+$secondary: #20ad96;
+$secondary-hover: #3f3a64;
+$tertiary: #79797a;
+
 $link: #3f3a64;
 
 /* BACKGROUNDS */
