--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -9,5 +9,8 @@ $link: #3f3a64;
 /* BACKGROUNDS */
 $dropdown-hover: #eceeef;
 
+$main-bg: #fff;
+$secondary-bg: #f8f8f8;
+
 /* BORDERS */
 $main-border: #ecf2f9;
